How To Implementing Istio Ambient Mesh In Kubernetes/demo-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: echoserver-policy
  namespace: ambient
spec:
  selector:
    matchLabels:
      istio.io/gateway-name: echoserver-gtw-1
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        methods: ["GET"]
